[project]
name = "ant-image"
version = "0.1.0"
authors = [
  { name="noobiezt0" },
]
description = "A very lightweight image file format."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/noobiezt0/ant"
Issues = "https://github.com/noobiezt0/ant/issues"
